[project]
name = "brev-dashboards"
version = "0.1.0"
description = "Interactive Marimo dashboards for Brev Data Platform"
requires-python = ">=3.10"
dependencies = [
    "marimo>=0.10.0",
    "weaviate-client>=4.9.0",
    "requests>=2.31.0",
    "lakefs-sdk>=1.0.0",
    "polars>=1.0.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]